Arquivo index.html alterado

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
         <span>EuroTour</span>
         <nav class="principal">
             <ul>
-              <li>
-                <a href="#passagens">Passagens</a>
-              </li>
+              <li><a href="#passagens">Passagens</a></li>
         
               <li>
                 <a href="#hospedagem">Hospedagem</a>
